tests/operator/subtract_num_random_string.out
[31merror[error]: unsupported operand type(s) for -: 'number' and 'str'
----- Traceback -----
  ┌─ <unknown>:1:9
  | 
1 | print(1 - "a") # Error
  |          ^
[0m