tests/operator/subtract_num_random_string.my
print(1 - "a") # Error
